[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://fonts/ttf/Hack-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://fonts/ttf/Hack-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/Terminal.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
extra_spacing_top = 2
extra_spacing_char = -1
extra_spacing_space = -2
font_data = ExtResource( 2 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top" type="HBoxContainer" parent="UI"]
margin_right = 1024.0
margin_bottom = 197.0
rect_pivot_offset = Vector2( -295, -37 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Left" type="VBoxContainer" parent="UI/Top"]
margin_right = 338.0
margin_bottom = 197.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Center" type="VBoxContainer" parent="UI/Top"]
margin_left = 342.0
margin_right = 681.0
margin_bottom = 197.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Right" type="VBoxContainer" parent="UI/Top"]
margin_left = 685.0
margin_right = 1024.0
margin_bottom = 197.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Center" type="HBoxContainer" parent="UI"]
margin_top = 201.0
margin_right = 1024.0
margin_bottom = 398.0
rect_pivot_offset = Vector2( -295, -37 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Left" type="VBoxContainer" parent="UI/Center"]
margin_right = 338.0
margin_bottom = 197.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Center" type="VBoxContainer" parent="UI/Center"]
margin_left = 342.0
margin_right = 681.0
margin_bottom = 197.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="UI/Center/Center"]
margin_right = 339.0
margin_bottom = 20.0
text = "Play"

[node name="Right" type="VBoxContainer" parent="UI/Center"]
margin_left = 685.0
margin_right = 1024.0
margin_bottom = 197.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Bottom" type="HBoxContainer" parent="UI"]
margin_top = 402.0
margin_right = 1024.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( -295, -37 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Left" type="VBoxContainer" parent="UI/Bottom"]
margin_right = 338.0
margin_bottom = 198.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Center" type="VBoxContainer" parent="UI/Bottom"]
margin_left = 342.0
margin_right = 681.0
margin_bottom = 198.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Right" type="VBoxContainer" parent="UI/Bottom"]
margin_left = 685.0
margin_right = 1024.0
margin_bottom = 198.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Terminal" parent="." instance=ExtResource( 4 )]

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="RichTextLabel" parent="Panel"]
anchor_left = 0.154297
anchor_top = 0.233333
anchor_right = 0.84668
anchor_bottom = 0.486667
custom_fonts/bold_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "
		This is a work of fiction, created for noncommercial purposes.
		4MinuteWarning does not support the being a dragon in real life.
This game is [b]18+[/b] , includes extreme content that some will find objectionable.
			this content must be enabled in the preferences menu.
	No pixels were harned ub the creation of this work of fantasy."
text = "
		This is a work of fiction, created for noncommercial purposes.
		4MinuteWarning does not support the being a dragon in real life.
This game is 18+ , includes extreme content that some will find objectionable.
			this content must be enabled in the preferences menu.
	No pixels were harned ub the creation of this work of fantasy."
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Panel" type="Panel" parent="Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -201.0

[node name="OlderThan18" type="CheckBox" parent="Panel/Panel"]
margin_right = 226.0
margin_bottom = 24.0
text = "I Am older then 18"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue_btn" type="Button" parent="Panel/Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -83.5
margin_top = -20.0
margin_right = 83.5
disabled = true
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="UI/Center/Center/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Panel/Panel/OlderThan18" to="." method="_on_OlderThan18_pressed"]
[connection signal="pressed" from="Panel/Panel/Continue_btn" to="." method="_on_Continue_btn_pressed"]
